docker compose, readme

--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -35,10 +35,18 @@
 	</dependencies>
 
 	<build>
+		<finalName>email-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<configuration>
+							<mainClass>com.adidas.emailservice.EmailServiceApplication</mainClass>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
