--- a/public-service/pom.xml
+++ b/public-service/pom.xml
@@ -39,20 +39,18 @@
 	</dependencies>
 
 	<build>
+		<finalName>public-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
-				</configuration>
+				<executions>
+					<execution>
+						<configuration>
+							<mainClass>com.adidas.publicservice.PublicServiceApplication</mainClass>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
