--- a/subscription-service/pom.xml
+++ b/subscription-service/pom.xml
@@ -57,10 +57,18 @@
 	</dependencies>
 
 	<build>
+		<finalName>subscription-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<configuration>
+							<mainClass>com.adidas.subscriptionservice.SubscriptionServiceApplication</mainClass>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
